fix: Font size is too large, causing display issues in some browsers (#520)

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -34,7 +34,7 @@
 }
 
 .text {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
   margin-left: 24px;
 }
